# uv-monorepo-examples

./: README.md
project0/: pyproject.toml
project0/src/project0/: __init__.py
project1/: pyproject.toml
project2/: pyproject.toml
